trying to fix the bkgd-plus-teal bottom overflow

--- a/TechComm/-css/infographic-style.css
+++ b/TechComm/-css/infographic-style.css
@@ -24,8 +24,6 @@
   background-image: url("https://tracigardner.github.io/TechComm/-images/backgrounds/plus-sign-508590.png");
   background-color: #ffffff;
   background-size: 100px;
-  width: 100%;
-  height: 100%;
 }
 
 p,
